core/tests/ui/store/derive_bridge_payload_without_bridge.stderr
error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:11:62
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Bridge)]
   |                                                              ^^^^^^ unsatisfied trait bound
   |
help: the trait `ResolveRecordId` is not implemented for `PlainChild`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:7:1
   |
 7 | struct PlainChild {
   | ^^^^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveRecordId`
  --> src/model/meta.rs
   |
   | impl ResolveRecordId for RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `appdb::prelude::RecordId`
...
   | impl ResolveRecordId for &RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&appdb::prelude::RecordId`
   = note: required for `PlainChild` to implement `Bridge`
   = note: this error originates in the derive macro `Bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:11:62
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Bridge)]
   |                                                              ^^^^^^ unsatisfied trait bound
   |
help: the trait `appdb::Crud` is not implemented for `PlainChild`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:7:1
   |
 7 | struct PlainChild {
   | ^^^^^^^^^^^^^^^^^
help: the trait `Bridge` is implemented for `Dispatcher`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:11:62
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Bridge)]
   |                                                              ^^^^^^
   = note: required for `PlainChild` to implement `Bridge`
   = note: this error originates in the derive macro `Bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PlainChild: ModelMeta` is not satisfied
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:13:11
   |
13 |     Plain(PlainChild),
   |           ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ModelMeta` is not implemented for `PlainChild`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:7:1
   |
 7 | struct PlainChild {
   | ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:13:11
   |
13 |     Plain(PlainChild),
   |           ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ResolveRecordId` is not implemented for `PlainChild`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:7:1
   |
 7 | struct PlainChild {
   | ^^^^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveRecordId`
  --> src/model/meta.rs
   |
   | impl ResolveRecordId for RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `appdb::prelude::RecordId`
...
   | impl ResolveRecordId for &RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&appdb::prelude::RecordId`
   = note: required for `PlainChild` to implement `Bridge`

error[E0277]: the trait bound `PlainChild: Bridge` is not satisfied
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:13:11
   |
13 |     Plain(PlainChild),
   |           ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `appdb::Crud` is not implemented for `PlainChild`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:7:1
   |
 7 | struct PlainChild {
   | ^^^^^^^^^^^^^^^^^
help: the trait `Bridge` is implemented for `Dispatcher`
  --> tests/ui/store/derive_bridge_payload_without_bridge.rs:11:62
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Bridge)]
   |                                                              ^^^^^^
   = note: required for `PlainChild` to implement `Bridge`
   = note: this error originates in the derive macro `Bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
